--- a/css/style.css
+++ b/css/style.css
@@ -11,8 +11,8 @@ html{
     background-size:cover;
 }       
 @font-face {
-    font-family: eletro;
-    src: url(/font/electr.ttf);
+    font-family: 'eletro';
+    src: url(../font/electr.ttf);
 }
 .entrada{
     width: 100%;
